--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
             <!-- CTA: круглая кнопка со строкой по кругу -->
          </section>
       </main>
-      <script src="/index.js"></script>
+      <script src="./js/index.js"></script>
    </body>
 </html>
